--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:layout_width="fill_parent"
+<RelativeLayout android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-  xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:id="@+id/title"
         android:layout_width="fill_parent"
@@ -21,18 +21,41 @@
             android:textSize="19sp" />
 
     </RelativeLayout>
-    <ScrollView
-        android:id="@+id/scrollview_total"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical">
-    <LinearLayout
-        android:layout_marginTop="30dp"
-        android:orientation="vertical"
-        android:id="@id/missionList"
-        android:paddingTop="6.0dip"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_normal"/>
- </ScrollView>
+
+        <GridView
+            android:layout_marginTop="30dp"
+            android:id="@+id/missionList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:numColumns="4"
+            android:horizontalSpacing="10dp"
+            android:verticalSpacing="10dp"
+            android:paddingTop="10dp"
+            android:listSelector="@color/white"
+            android:stretchMode="columnWidth" />
+
+    <Button
+        android:id="@+id/btn_attend"
+        android:layout_width="170dp"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/birth"
+        android:text="조별출석률"
+        android:textSize="15sp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/buttons"/>
+
+    <Button
+        android:id="@+id/btn_setting"
+        android:layout_width="170dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/birth"
+        android:text="설정관리"
+        android:textSize="15sp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/buttons"/>
+
 </RelativeLayout>
