--- a/app/src/main/res/layout/memberattendactivity.xml
+++ b/app/src/main/res/layout/memberattendactivity.xml
@@ -34,11 +34,12 @@
                         android:layout_width="fill_parent"
                         android:layout_height="40.0dip"
                         android:layout_marginTop="10.0px">
+
                         <TextView
                             android:gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="주일 : "
+                            android:text=""
                             android:textColor="@android:color/darker_gray"/>
                         <TextView
                             android:textSize="17.0sp"
@@ -46,7 +47,7 @@
                             android:id="@id/txtSunday"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="yyyy-mm-dd"
+                            android:text=""
                             android:textColor="@android:color/darker_gray"/>
                     </LinearLayout>
                     <LinearLayout
