--- a/app/src/main/res/layout/gbsmemberattendactivity.xml
+++ b/app/src/main/res/layout/gbsmemberattendactivity.xml
@@ -6,13 +6,13 @@
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
              android:id="@+id/toolbar"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
@@ -21,8 +21,8 @@
              android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
              android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    </android.support.design.widget.AppBarLayout>
-    <android.support.design.widget.TabLayout
+    </com.google.android.material.appbar.AppBarLayout>
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/layout_tab"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -33,7 +33,7 @@
         app:tabIndicatorColor="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-        <android.support.v4.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/pager_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
