--- a/app/src/main/res/layout/mainmenuactivity.xml
+++ b/app/src/main/res/layout/mainmenuactivity.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:orientation="vertical" 
-android:layout_width="fill_parent" 
-android:layout_height="fill_parent"
-  xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto">
     <TextView
         android:textSize="12.0sp"
         android:gravity="right"
